syntax = "proto3";

package dataprocessing;
option go_package="github.com/neelchoudhary/budgetwallet-api-server/services/dataprocessing";

message AccountDailySnapshot {
    string date = 1;
    double start_day_balance = 2;
    double end_day_balance = 3;
    double cash_out = 4;
    double cash_in = 5;
}

message AccountMonthlySnapshot {
    string date = 1;
    double start_month_balance = 2;
    double end_month_balance = 3;
    double cash_out = 4;
    double cash_in = 5;
}

message GetAccountDailySnapshotsRequest {
    int64 account_id = 1;
}

message GetAccountDailySnapshotsResponse {
    repeated AccountDailySnapshot account_daily_snapshots = 1;
}

message GetAccountMonthlySnapshotsRequest {
    int64 account_id = 1;
}

message GetAccountMonthlySnapshotsResponse {
    repeated AccountMonthlySnapshot account_monthly_snapshots = 1;
}

message GetCategoryMonthlySnapshotsRequest {
    int64 category_id = 1;
}

message GetCategoryMonthlySnapshotsResponse {
    repeated AccountMonthlySnapshot account_monthly_snapshots = 1;
}

message Empty {}

service DataProcessingService {
    rpc GetAccountDailySnapshots(GetAccountDailySnapshotsRequest) returns (GetAccountDailySnapshotsResponse) {};
    rpc GetAccountMonthlySnapshots(GetAccountMonthlySnapshotsRequest) returns (GetAccountMonthlySnapshotsResponse) {};
    rpc GetCategoryMonthlySnapshots(GetCategoryMonthlySnapshotsRequest) returns (GetCategoryMonthlySnapshotsResponse) {};
    // get estimated monthly income
    // get monthly savings
    // get category spending/saving
    // get recurring transactions
}