syntax = "proto3";

package plaidfinances;
option go_package="github.com/neelchoudhary/budgetwallet-api-server/services/plaidfinances";

message Category {
    int64 id = 1;
    string name = 2;
    string group = 3;
}

message LinkFinancialInstitutionRequest {
    string public_token = 1;
    string plaid_institution_id = 2;
}

message LinkFinancialInstitutionResponse {
    bool success = 1;
} 

message UpdateFinancialInstitutionRequest {
    int64 item_id = 1;
}

message UpdateFinancialInstitutionResponse {
    bool success = 1;
}

message UpdateFinancialAccountsRequest {
    int64 item_id = 1;
}

message UpdateFinancialAccountsResponse {
    bool success = 1;
}

message RemoveFinancialInstitutionRequest {
    int64 item_id = 1;
}

message RemoveFinancialInstitutionResponse {
    bool success = 1;
}

message AddHistoricalFinancialTransactionsRequest {
    int64 user_id = 1;
    int64 item_id = 2;
    string plaid_item_id = 3;
}

message AddHistoricalFinancialTransactionsResponse {
    int64 newTransactions = 1;
}

message AddFinancialTransactionsRequest {
    int64 user_id = 1;
    int64 item_id = 2;
    string plaid_item_id = 3;
}

message AddFinancialTransactionsResponse {
    int64 newTransactions = 1;
}

message RemoveFinancialTransactionsRequest {
    int64 user_id = 1;
    repeated int64 transaction_ids = 2;
    repeated string plaid_transaction_ids = 3;
}

message Empty {}

service PlaidFinancesService {
    rpc LinkFinancialInstitution(LinkFinancialInstitutionRequest) returns (LinkFinancialInstitutionResponse) {};
    rpc UpdateFinancialInstitution(UpdateFinancialInstitutionRequest) returns (UpdateFinancialInstitutionResponse) {};
    rpc UpdateFinancialAccounts(UpdateFinancialAccountsRequest) returns (UpdateFinancialAccountsResponse) {};
    rpc RemoveFinancialInstitution(RemoveFinancialInstitutionRequest) returns (RemoveFinancialInstitutionResponse) {};
    rpc AddHistoricalFinancialTransactions(AddHistoricalFinancialTransactionsRequest) returns (AddHistoricalFinancialTransactionsResponse) {};
    rpc AddFinancialTransactions(AddFinancialTransactionsRequest) returns (AddFinancialTransactionsResponse) {};
    rpc RemoveFinancialTransactions(RemoveFinancialTransactionsRequest) returns (Empty) {};
}